templates/machinetranslation_template.yaml
---
# Source: machinetranslation/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:  
  name: machinetranslation-release-name
  labels:
    app: machinetranslation
    chart: machinetranslation-0.0.15
    release: release-name
    heritage: Helm
spec:
  podSelector:
    matchLabels:
      app: machinetranslation
      release: release-name
  policyTypes:
    - Ingress
  ingress:
    - ports:
---
# Source: machinetranslation/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: machinetranslation-release-name
  labels:
    app: machinetranslation
    chart: machinetranslation-0.0.15
    release: release-name
    heritage: Helm
spec:
  type: NodePort
  selector:
    app: machinetranslation
    release: release-name
    routed_via: release-name
  ports:
  - name: http
    protocol: TCP
    port: 8989
---
# Source: machinetranslation/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: machinetranslation-release-name
  labels:
    app: machinetranslation
    chart: machinetranslation-0.0.15
    release: release-name
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: machinetranslation
      release: release-name
  replicas: 1
  template:
    metadata:
      labels:
        app: machinetranslation
        release: release-name
        routed_via: release-name
      annotations:
        prometheus.io/port: "9102"        
    spec:
      containers:
        # The main application container
        - name: machinetranslation-release-name
          image: "docker-registry.wikimedia.org/wikimedia/mediawiki-services-machinetranslation:2023-04-11-140816-production"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8989
          livenessProbe:
            initialDelaySeconds: 300
            tcpSocket:
              port: 8989
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8989
          resources:
            requests:
              cpu: 100m
              memory: 32Gi
            limits:
              cpu: 4
              memory: 32Gi
---
# Source: machinetranslation/templates/ingress.yaml
---
---
# Source: machinetranslation/templates/tests/test-service-checker.yaml
apiVersion: v1
kind: Pod
metadata:
  name: 'machinetranslation-release-name-service-checker'
  annotations:
    "helm.sh/hook": test
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
spec:
  containers:
  - name: 'machinetranslation-release-name-service-checker'
    image: "docker-registry.wikimedia.org/service-checker"
    imagePullPolicy: IfNotPresent
    args: ["-t", "5", '$(MACHINETRANSLATION_RELEASE_NAME_SERVICE_HOST)', 'http://machinetranslation-release-name:8989']
  dnsPolicy: ClusterFirst
  restartPolicy: Never
